--- a/test/_config.yml
+++ b/test/_config.yml
@@ -275,6 +275,8 @@ defaults:
       read_time: true
       share: true
       related: true
+      mathjax: true
+      sidebar_main: true
   # _pages
   - scope:
       path: "_pages"
