--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,13 +2,13 @@
 main:
   #- title: "Home"
   #  url: "/"
-  - title: "Introduce"
+  - title: "About"
     url: /about/
   - title: "Category"
     url: "/categories/"
   - title: "Tags"
     url: /tags/
-    
+
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
